added markup for html

--- a/index.html
+++ b/index.html
@@ -59,23 +59,142 @@
                 <button>Shop Now</button>
         </div>
     </header>
-    <section class="fave">
-        <div class="fave-top">
+    <section class="smoothies">
+        <div>
             <h2> What are these smoothies</h2>
-            <p>A smoothies is a drink made from purred raw fruit, vegetables, and sometimes dairy products (milk, yougurt, ice-cream or cottage cheese), typically</p>
+            <p>A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt, ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients, such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder, plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements. </p>
         </div>
         <div class="content">
-
+            <div>
+                <img src="">
+                <h4>Plant Based</h4>
+            </div>
+            <div>
+                <img scr="">
+                <h4>Vegan</h4>
+            </div>
+            <div>
+                <img src="">
+                <h4>Poleo</h4>
+            </div>
+            <div>
+                <img scr="">
+                <h4>Gluten-Free</h4>
+            </div>
+            <div>
+                <img scr="">
+                <h4>Corn-Free</h4>
+            </div>
+            <div>
+                <img scr="">
+                <h4>Soy-Free</h4>
+            </div>
+            <div>
+                <img scr="">
+                <h4>Ayurvedic</h4>
+            </div>
+            <div>
+                <img scr="">
+                <h4>Made With Love</h4>
+            </div>
         </div>
     </section>
-    <section class="smoothies"></section>
-    <section class="about"></section>
-    <section class="products"></section>
-    <section class="story"></section>
-    <section class="testimonials"></section>
-    <section class="blog"></section>
-    <section class="instagram"></section>
-    <section class="footer"></section>
+    <section class="about">
+        <div>
+        <img src="">
+        <div>
+            <h2>What makes Smoothie an awesome drink?</h2>
+            <ul type="">
+                <li><b>Crunchy </b>Puffs Texture</li>
+                <li><b>100 Calories </b>per drink</li>
+                <li>4g Plant Protein</li>
+                <li>Good source of <b>Magnesium & Vitamin B6</b></li>
+                <li><b>No Sugar </b>in our Savory Flavors</li>
+                <li><b>Non GMO, Vegan & Paleo</b></li>
+                <li><b>Gluten-Free & Grain-Free</b></li>
+                <li><b>Corn-Free & Soy-Free</b></li>
+            </ul>
+            <span><button>About Organic Smoothie<img src=""></button></span>
+        </div>
+        </div>
+    </section>
+    <section class="products">
+        <div>
+            <div><img src="">
+                <h3>Dark Chocolate Smoothie</h3>
+                <span>100ml</span><br>
+                <span><button>Buy  <img src="#"></button></span>
+            </div>
+            <div><img src="">
+            <h3>Veggan Lettuce Smoothie</h3></div>
+            <span>100ml</span><br>
+            <span><button>Buy  <img src="#"></button></span>
+            </div>
+            <div><img src="">
+                <h3>Lemon Ginger Smoothie</h3>
+                <span>100ml</span><br>
+                <span><button>Buy <img src="#"></button></span>
+            </div>
+            <div>
+                <img src="">
+                <h3>Turmeric Garlic Smoothie</h3>
+                <span>100ml</span><br>
+                <span><button>Buy  <img src="#"></button></span>
+            </div>
+        </div>
+    </section>
+    <section class="story">
+        <div>
+            <h2>Our story</h2>
+            <p>As products....</p>
+            <span><button>Who we are  <img src="#"></button></span>
+        </div>
+        <div>
+        <img src="#">
+        </div>
+    </section>
+    <section class="testimonials">
+    <h2>Why clients LOVE us?</h2>
+    <blockquote>Smoothies is great.....</blockquote>
+    <cite>-from Santa Monica, CA</cite>
+    <img src="#">
+    <img src="">
+    </section>
+    <section class="blog">
+        <div>
+            <h2> Our blog</h2>
+            <img src="#">
+        </div>
+        <div>
+            <h2>ASAFOETIDIA-THE NEXT TURMERIC?</h2>
+            <span>Jun 16, 2020</span>
+        </div>
+        <div>
+            <p>If the fruit ingredients and the green vegetable ingredients ...<button>Read More <img src="#"></button></p>
+        </div>
+        <button><img src="#">ashasuperfoods</button>
+    </section>
+    <section class="instagram">
+        <div>
+            <div>
+                <img src="#">
+                <img src="" alt="">
+                
+            </div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </section>
+    <section class="footer">
+        <div>
+
+        </div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </section>
 
 </body>
 
