--- a/index.html
+++ b/index.html
@@ -179,12 +179,23 @@
             <div>
                 <img src="#">
                 <img src="" alt="">
-                
             </div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+                <img src="#">
+                <img src="" alt="">
+            </div>
+            <div>
+                <img src="#">
+                <img src="" alt="">
+            </div>
+            <div>
+                <img src="#">
+                <img src="" alt="">
+            </div>
+            <div>
+                <img src="#">
+                <img src="" alt="">
+            </div>
         </div>
     </section>
     <section class="footer">
