added work in block insta

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             <div class="personal">
                 <ul>
                     <li>
-                        <a href=""><img scr="" alt=""></a>
+                        <a href=""><img src="" alt=""></a>
                     </li>
                     <li>
-                        <a href=""><img scr="" alt=""></a>
+                        <a href=""><img src="" alt=""></a>
                     </li>
                     <li>
-                        <a href=""><img scr="" alt=""></a>
+                        <a href=""><img src="" alt=""></a>
                         <span>3</span>
                     </li>
                 </ul>
@@ -45,10 +45,10 @@
             <div class="social">
                 <ul>
                     <li>
-                        <a href=""><img scr="" alt=""></a>
+                        <a href=""><img src="" alt=""></a>
                     </li>
                     <li>
-                        <a href=""><img scr="" alt=""></a>
+                        <a href=""><img src="" alt=""></a>
                     </li>
                     <li>
                         <a href=""><img src="" alt=""></a>
@@ -66,148 +66,200 @@
         </div>
         <div class="content">
             <div>
-                <img src="">
+                <img src="" alt="">
                 <h4>Plant Based</h4>
             </div>
             <div>
-                <img scr="">
+                <img src="" alt="">
                 <h4>Vegan</h4>
             </div>
             <div>
-                <img src="">
+                <img src="" alt="">
                 <h4>Poleo</h4>
             </div>
             <div>
-                <img scr="">
+                <img src="" alt="">
                 <h4>Gluten-Free</h4>
             </div>
             <div>
-                <img scr="">
+                <img src="" alt="">
                 <h4>Corn-Free</h4>
             </div>
             <div>
-                <img scr="">
+                <img src="" alt="">
                 <h4>Soy-Free</h4>
             </div>
             <div>
-                <img scr="">
+                <img src="" alt="">
                 <h4>Ayurvedic</h4>
             </div>
             <div>
-                <img scr="">
+                <img src="" alt="">
                 <h4>Made With Love</h4>
             </div>
         </div>
     </section>
     <section class="about">
         <div>
-        <img src="">
+        <img src="" alt="">
         <div>
             <h2>What makes Smoothie an awesome drink?</h2>
             <ul type="">
-                <li><b>Crunchy </b>Puffs Texture</li>
-                <li><b>100 Calories </b>per drink</li>
+                <li><span>Crunchy </span>Puffs Texture</li>
+                <li><span>100 Calories </span>per drink</li>
                 <li>4g Plant Protein</li>
-                <li>Good source of <b>Magnesium & Vitamin B6</b></li>
-                <li><b>No Sugar </b>in our Savory Flavors</li>
-                <li><b>Non GMO, Vegan & Paleo</b></li>
-                <li><b>Gluten-Free & Grain-Free</b></li>
-                <li><b>Corn-Free & Soy-Free</b></li>
+                <li>Good source of <span>Magnesium & Vitamin B6</span></li>
+                <li><span>No Sugar </span>in our Savory Flavors</li>
+                <li><span>Non GMO, Vegan & Paleo</span></li>
+                <li><span>Gluten-Free & Grain-Free</span></li>
+                <li><span>Corn-Free & Soy-Free</span></li>
             </ul>
-            <span><button>About Organic Smoothie<img src=""></button></span>
+            <button>About Organic Smoothie<img src="" alt=""></button>
         </div>
         </div>
     </section>
     <section class="products">
         <div>
-            <div><img src="">
+            <div><img src="" alt="">
                 <h3>Dark Chocolate Smoothie</h3>
                 <span>100ml</span><br>
-                <span><button>Buy  <img src="#"></button></span>
+                <button>Buy  <img src="#" alt=""></button>
             </div>
-            <div><img src="">
+            <div><img src="" alt="">
             <h3>Veggan Lettuce Smoothie</h3></div>
             <span>100ml</span><br>
-            <span><button>Buy  <img src="#"></button></span>
+            <span><button>Buy  <img src="#" alt=""></button></span>
             </div>
-            <div><img src="">
+            <div><img src="" alt="">
                 <h3>Lemon Ginger Smoothie</h3>
                 <span>100ml</span><br>
-                <span><button>Buy <img src="#"></button></span>
+                <span><button>Buy <img src="#" alt=""></button></span>
             </div>
             <div>
-                <img src="">
+                <img src="" alt="">
                 <h3>Turmeric Garlic Smoothie</h3>
                 <span>100ml</span><br>
-                <span><button>Buy  <img src="#"></button></span>
+                <span><button>Buy  <img src="#" alt=""></button></span>
             </div>
         </div>
     </section>
     <section class="story">
         <div>
             <h2>Our story</h2>
-            <p>As products....</p>
-            <span><button>Who we are  <img src="#"></button></span>
+            <p>As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp, skin, and seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake. </p>
+            <button>Who we are  <img src="#" alt=""></button>
         </div>
         <div>
-        <img src="#">
+        <img src="#" alt="">
         </div>
     </section>
     <section class="testimonials">
-    <h2>Why clients LOVE us?</h2>
-    <blockquote>Smoothies is great.....</blockquote>
-    <cite>-from Santa Monica, CA</cite>
-    <img src="#">
-    <img src="">
+        <h2>Why clients LOVE us?</h2>
+
+        <div>
+            <div>
+                <q>"Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</q>
+                <cite>-from Santa Monica, CA</cite>
+            </div>
+            <img src="#" alt="">
+        </div>
+        <div>
+            <img src="#" alt="">
+            <img src="#" alt="">
+        </div>
+
     </section>
     <section class="blog">
         <div>
             <h2> Our blog</h2>
-            <img src="#">
+            <img src="#" alt="">
         </div>
         <div>
             <h2>ASAFOETIDIA-THE NEXT TURMERIC?</h2>
             <span>Jun 16, 2020</span>
         </div>
         <div>
-            <p>If the fruit ingredients and the green vegetable ingredients ...<button>Read More <img src="#"></button></p>
+            <p>If the fruit ingredients and the green vegetable ingredients ...<button>Read More <img src="#" alt=""></button></p>
         </div>
-        <button><img src="#">ashasuperfoods</button>
+        <a href=""><img src="#" alt="">ashasuperfoods</a>
     </section>
     <section class="instagram">
         <div>
             <div>
-                <img src="#">
+                <img src="#" alt="">
                 <img src="" alt="">
             </div>
             <div>
-                <img src="#">
+                <img src="#" alt="">
                 <img src="" alt="">
             </div>
             <div>
-                <img src="#">
+                <img src="#" alt="">
                 <img src="" alt="">
             </div>
             <div>
-                <img src="#">
+                <img src="#" alt="">
                 <img src="" alt="">
             </div>
             <div>
-                <img src="#">
+                <img src="#" alt="">
                 <img src="" alt="">
             </div>
         </div>
     </section>
     <section class="footer">
         <div>
-
+            <img src="" alt="">
+            <h4>fresh food</h4>
+            <div>
+                <h3>Information</h3>
+                <nav>
+                    <li><a href="">Search</a></li>
+                    <li><a href=""> Contact us</a></li>
+                    <li><a href=""> Terms & Conditions</a></li>
+                    <li><a href=""> Privacy Policy</a></li>
+                </nav>
+            </div>
+            <div>
+                <h3>Payment</h3>
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+            <div>
+                <div>
+                <h3>Don't miss out!</h3>
+                <input type="image" value="subscribe to our newsletter"><br>
+                <h4> FOLLOW US</h4>
+                <div class="social">
+                    <ul>
+                        <li>
+                            <a href=""><img src="" alt="">F</a>
+                        </li>
+                        <li>
+                            <a href=""><img src="" alt="">P</a>
+                        </li>
+                        <li>
+                            <a href=""><img src="" alt="">I</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            </div>
         </div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>
+            <spam>2020. All Rights Reserved</spam>
+            <spam>Go top</spam>
+            <button><img src="#"></button>
+        </div>
     </section>
-
 </body>
-
 </html>
 
