added some changes by w3c

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li><a href="">Testimonials</a></li>
                 </ul> 
             </nav>
+        </div>
             <div class="logo">
                 <a href="">
                     <img src="" alt="">
@@ -214,10 +215,12 @@
             <div>
                 <h3>Information</h3>
                 <nav>
+                    <ul>
                     <li><a href="">Search</a></li>
                     <li><a href=""> Contact us</a></li>
                     <li><a href=""> Terms & Conditions</a></li>
                     <li><a href=""> Privacy Policy</a></li>
+                    </ul>
                 </nav>
             </div>
             <div>
@@ -254,11 +257,10 @@
             </div>
             </div>
         </div>
-        <div>
-            <spam>2020. All Rights Reserved</spam>
-            <spam>Go top</spam>
-            <button><img src="#"></button>
-        </div>
+        <span>2020. All Rights Reserved</span>
+        <span></span>Go top</span>
+        <button><img src="#" alt=""></button>
+        
     </section>
 </body>
 </html>
