added changesin tegs

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             </div>
         </div>
         <span>2020. All Rights Reserved</span>
-        <span></span>Go top</span>
+        <span>Go top</span>
         <button><img src="#" alt=""></button>
         
     </section>
