--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
 
     <script type="text/javascript" src="libraries/WOW-master/dist/wow.min.js" ></script>
-    <scrip>
+    <script>
         new WOW().init();
 
         </script>
