added more media for header

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <li class="persoanl__list-item">
                                 <a class="perosnal__link" href="">
                                     <img class="personal__icon-search" src="assets/images/Cart-icon.png" alt="">
-                                <span class="persoanl__cart-count">5</span>
+                                <!-- <span class="persoanl__cart-count">5</span> -->
                             </a>
                             </li>
                         </ul>
