adeed changes for media

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Сюда подключаем стили -->
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="assets/images/">
     <link rel="stylesheet" href="assets/fonts/">
