added work with less

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
     <!-- Сюда подключаем стили -->
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="./less/main.min.css">
     <link rel="stylesheet" href="assets/images/">
     <link rel="stylesheet" href="assets/fonts/">
     <link rel="stylesheet" href="libraries/WOW-master/css/libs/animate.css">
@@ -46,7 +45,7 @@
                         </li>
                     </ul> 
                     </nav>
-                    <div class="container__details">
+                    <div class="personal__container">
                     <div class="personal">
                         <ul class="personal__list">
                             <li class="personal__list-item">
