--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Сюда подключаем стили -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="./less/main.min.css">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/css/main.min.css">
     <link rel="stylesheet" href="assets/images/">
     <link rel="stylesheet" href="assets/fonts/">
     <link rel="stylesheet" href="libraries/WOW-master/css/libs/animate.css">
