added less work

--- a/index.html
+++ b/index.html
@@ -169,25 +169,25 @@
             <div class="products__item products__item--chocolate">
                 <img class="products__img" src="assets/images/dark-chocolate-smooth.png" alt="">
                 <h3 class="products__title">Dark Chocolate Smoothie</h3>
-                <span class="product__sub--title">100ml</span><br>
+                <span class="products__sub--title">100ml</span><br>
                 <button class="products__btn products__btn--chocolate">Buy  <img class="btn__icon--white" src="assets/images/Arrow-white.png" alt=""></button>
             </div>
         <div class="products__item products__item--lettuce">
                 <img class="product__img" src="assets/images/vegan-lettuce-smooth.png" alt="">
                 <h3 class="products__title">Veggan Lettuce Smoothie</h3>
-                <span class=" product__sub--title">100ml</span><br>
+                <span class=" products__sub--title">100ml</span><br>
                 <button class="products__btn products__btn--lettuce">Buy<img class="btn__icon--white" src="assets/images/Arrow-white.png" alt=""></button>
                 </div>
             <div class="products__item products__item--ginger">
                 <img class="product__img" src="assets/images/lemon-ginger-smooth.png" alt="">
                 <h3 class="products__title">Lemon Ginger Smoothie</h3>
-                <span class=" product__sub--title">100ml</span><br>
+                <span class=" products__sub--title">100ml</span><br>
                 <button class="products__btn products__btn--ginger">Buy <img class="btn__icon--white" src="assets/images/Arrow-white.png" alt=""></button>
             </div>
             <div class="products__item products__item--turmeric">
                 <img class="product__img" src="assets/images/turmeric-garlic-smooth.png" alt="">
                 <h3 class="products__title">Turmeric Garlic Smoothie</h3>
-                <span class="product__sub--title">100ml</span><br>
+                <span class="products__sub--title">100ml</span><br>
                 <button class="products__btn products__btn--turmeric">Buy  <img  class="btn__icon--white" src="assets/images/Arrow-white.png" alt=""></button>
             </div>
         
